fix vertical spacing of espresso grid

--- a/wp-content/themes/make-experiences/scss/espresso-grid.scss
+++ b/wp-content/themes/make-experiences/scss/espresso-grid.scss
@@ -28,6 +28,7 @@
         flex-wrap: wrap;
         width: 85%;
         float: left;
+		align-content: start;
         .ee_grid_box_revised.item {
             flex: 33%;
             max-width: 33%;
